--- a/Week7/Day3/demo/scratch.html
+++ b/Week7/Day3/demo/scratch.html
@@ -8,13 +8,16 @@
     <title>Demo</title>
 </head>
 <body>
-    <div id="parent">
-        <div class="child">
-            <div class="one">1</div>
-            <div class="two">2</div>
-            <div class="three">3</div>
+    
+        <div id="parent">
+            <div class="child one">1</div>
+            <div class="child two">2</div>
+            <div class="child three">3</div>
+            <div class="child four">4</div>
+            <div class="child five">5</div>
+            <div class="child six">6</div>
         </div>
         <!-- child -->
-    </div>
+   
 </body>
 </html>
