--- a/Week8/Day4/eod/index.html
+++ b/Week8/Day4/eod/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/static/index.css" rel="stylesheet">
     <title>Comments</title>
 </head>
 <body>
+    <h1 id="page-title">Create a comment</h1>
     <form id="comment-form-container" action="/comments" method="post">
         <input id="comment-input" name="comment" />
         <button id="comment-submit">Submit</button>
