--- a/Week9/Day3/01-add-remove-event-listeners/index.html
+++ b/Week9/Day3/01-add-remove-event-listeners/index.html
@@ -25,6 +25,7 @@
     </section>
     <section id="section-4">
         <button id="remove-listeners">Remove Listeners</button>
+        <!-- <button id="reinstate-listeners">Reinstate Listeners</button> -->
     </section>
 </body>
 
